[package]
name = "urap"
version = "0.1.0"
edition = "2021"
description = "Specification and library for the URAP protocol"
readme = "README.md"
repository = "https://github.com/Gip-Gip/urap"
license = "MIT"
license-file = "LICENSE"
keywords = ["embedded", "protocol", "unix-sockets", "io", "communication"]
categories = ["development-tools", "embedded", "no-std", "no-std::no-alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-io = "0.6.1"
[features]
std = ["embedded-io/std"]
usockets = ["std"]
full = ["std", "usockets"]
